--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </section>
     </main>
 
-    <footer class="">
+    <footer>
         <div class="contato container">
             <p>Desenvolvido por Jade Simões</p>
             <p>Todos os direitos reservados © 2023</p>
